--- a/style.css
+++ b/style.css
@@ -45,15 +45,16 @@ body,html{
     display:flex;
     height:calc(100vh - 40px);
     width:100%;
-    background-color:silver;
 }
 .product{
     height:190px;
     display:flex;
     flex-wrap:wrap;
     width:100%;
+    height: auto;
     padding:20px;
     gap:20px;
+    background-color:rgba(0, 0, 0, 0.342);
 }
 #item{
     background-color:rgba(255, 255, 255, 0.1);
@@ -78,4 +79,10 @@ body,html{
 }
 .header-left h2{
     font-style: italic;
+}
+#bg-image{
+    z-index:-1;
+    position: absolute;
+    width:100%;
+    height:auto;
 }
